--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
-    "elysia": "latest"
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.35.3",
+    "elysia": "latest",
+    "pg": "^8.13.1"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "@types/pg": "^8.11.10",
+    "bun-types": "latest",
+    "drizzle-kit": "^0.26.2",
+    "prettier": "3.3.3",
+    "tsx": "^4.19.2"
   },
   "module": "src/index.js"
 }
