--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
 		"dev": "bun run --watch src/index.ts"
 	},
 	"dependencies": {
+		"@elysiajs/swagger": "^1.1.5",
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.35.3",
+		"drizzle-typebox": "^0.1.1",
 		"elysia": "latest",
 		"pg": "^8.13.1"
 	},
@@ -17,6 +19,9 @@
 		"drizzle-kit": "^0.26.2",
 		"prettier": "3.3.3",
 		"tsx": "^4.19.2"
+	},
+	"overrides": {
+		"@sinclair/typebox": "0.32.34"
 	},
 	"module": "src/index.js"
 }
